--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "learnnodejs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/Tin210303/nodejs_learning#readme",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.2"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
